# MPM-Coding

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  QUICKSTART_EN.md  QUICKSTART_ZH.md  README.md  README_EN.md  README_ZH.md  RELEASING.md  SECURITY.md  _MPM_PROJECT_RULES.md  package_product.py  server.template.json
.github/workflows/: ci.yml  pages.yml  publish-mcp.yml  release.yml
Dev-SSOT/: Dev-AST-SSOT.md
docs/: MANUAL.md  MANUAL_EN.md  MANUAL_ZH.md  MCP_REGISTRY_ONE_TIME.md  MCP_REGISTRY_PUBLISHING_NOTES.md  REGISTRY_PUBLISHING.md  WHITEPAPER.md  WHITEPAPER_EN.md  mpm-coding-intro.md
docs/wiki/: architecture.html  index.html
mcp-server-go/: build_output.txt  go.mod  go.sum
mcp-server-go/cmd/server/: main.go
mcp-server-go/configs/: persona_library.json
mcp-server-go/internal/core/: database.go  detector.go  memory.go  memory_task_chain.go  memory_task_chain_test.go  memory_test.go  models.go
mcp-server-go/internal/services/: ast_indexer.go  ast_indexer_test.go  search_engine.go  search_engine_test.go  watcher.go
mcp-server-go/internal/services/ast_indexer_rust/: Cargo.toml  README.md  test_output.txt
mcp-server-go/internal/services/ast_indexer_rust/src/: main.rs
mcp-server-go/internal/tools/: analysis_tools.go  analysis_tools_test.go  intelligence_tools.go  intelligence_tools_test.go  map_renderer.go  map_renderer_test.go  path_guard.go  path_guard_test.go  resources.go  search_tools.go  (+6 more)
mcpb/: manifest.json
opencode-agents/: README.md
opencode-agents/docs/: LLM_FRIENDLY_AGENT_DOCS.md
scripts/: sync.ps1
(+5 files in other folders)
